--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           ref: gh-pages
 
-      - uses: compas-dev/compas-actions.docversions@main
+      - uses: compas-dev/compas-actions.docversions@v1.0.2
         with:
           current_version: ${{ needs.build.outputs.current_version }}
 
